# discord_joker_bot

./: Cargo.toml  Dockerfile  config.toml  joker_quote.txt
src/: config.rs  main.rs
src/bot/: event_handler.rs  mod.rs
src/quote/: mod.rs  quote_error.rs
