[package]
name = "joker-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
config = "0.13.3"
log = "0.4.18"
public-ip = "0.2.2"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
simplelog = "0.12.1"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["rt", "macros", "rt-multi-thread"] }

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client",
  "gateway",
  "http",
  "rustls_backend",
  "base64",
  "flate2",
  "builder",
  "cache",
  "model"
]
